<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="24sp"
        android:textColor="@color/sky_blue_2"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/wanna_logout"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPositive"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/yes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNegative"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:text="@string/cancel"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>